2009-03-03  Ulrich Drepper  <drepper@redhat.com>

	* po/pl.po: Update from translation team.

2009-03-02  Ulrich Drepper  <drepper@redhat.com>

	[BZ #7083]
	* sysdeps/unix/sysv/linux/fallocate.c: New file.
	* sysdeps/unix/sysv/linux/fallocate64.c: New file.
	* sysdeps/unix/sysv/linux/wordsize-64/fallocate64.c: New file.
	* sysdeps/unix/sysv/linux/wordsize-64/fallocate.c: New file.
	* sysdeps/unix/sysv/linux/i386/fallocate64.c: New file.
	* sysdeps/unix/sysv/linux/i386/fallocate.c: New file.
	* sysdeps/unix/sysv/linux/Versions: Export fallocate and fallocate64
	for GLIBC_2.10.
	* sysdeps/unix/sysv/linux/Makefile [subdir=io] (sysdep_routines):
	Add fallocate and fallocate64.

	* io/fcntl.h: Pretty printing.

2009-03-02  Richard Guenther  <rguenther@suse.de>

	* misc/sys/cdefs.h (__extern_always_inline): Add __artificial__
	attribute also for non-C99 inline semantics variant.

2009-02-12  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power7/fpu/Implies: New file.
	* sysdeps/powerpc/powerpc32/power7/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power7/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power7/Implies: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power7/fpu/Implies:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/power7/fpu/Implies:
	Likewise.

2009-03-02  Ulrich Drepper  <drepper@redhat.com>

	* po/cs.po: Update from translation team.

2009-02-28  Ulrich Drepper  <drepper@redhat.com>

	* po/bg.po: Update from translation team.
	* po/sv.po: Likewise.
	* po/fi.po: Likewise.
	* po/vi.po: Likewise.

2009-02-27  Roland McGrath  <roland@redhat.com>

	* Makeconfig (%.v.i): Depend on Makeconfig.
	Exclude % lines from initial #-comment removal.

2009-02-27  Ulrich Drepper  <drepper@redhat.com>

	* po/ko.po: Update from translation team.

2009-02-26  Roland McGrath  <roland@redhat.com>

	* shadow/lckpwdf.c (__lckpwdf): Move FLAGS inside block using it,
	avoids unused warning.
